fix overflow on info window

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -202,7 +202,7 @@ input[type="search"] {
 }
 
 .info-container {
-	overflow: scroll;
+	overflow: auto;
 	height: 100%;
 	font-family: sans-serif;
 }
